--- a/notebooks/scalp_2dplot_diffusion.ipynb
+++ b/notebooks/scalp_2dplot_diffusion.ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc7df24d-a644-4404-ae72-e34783430959",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from warnings import simplefilter\n",
+    "# ignore all future warnings\n",
+    "simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dfac27a5-40db-4f13-a4af-67f31baf90b0",
    "metadata": {},
    "outputs": [],
@@ -13,22 +31,53 @@
     "%config Completer.use_jedi = True\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
-    "mpl.rc(\"figure\", dpi=300)\n"
+    "mpl.rc(\"figure\", dpi=300)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b59682b7-f799-45e7-80f4-38a297e302ca",
+   "id": "0a6c0d02-6c44-4fc5-ab27-5e97efed67ec",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b59682b7-f799-45e7-80f4-38a297e302ca",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from scalp import data,  test_config\n",
     "datasets = data.loaddata_scib(test_config.scib_datapath, \n",
+    "                       datasets = [\"Immune_ALL_hum_mou\"],\n",
     "                       maxdatasets=5, \n",
     "                       maxcells = 600, \n",
-    "                       datasets = [\"Immune_ALL_hum_mou.h5ad\"])\n",
+    "                             )\n",
     "dataset = datasets[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6171523-ffd8-4246-9ba6-0b0f78f0ca5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_ts = data.loaddata_timeseries(test_config.timeseries_datapath, \n",
+    "                                       datasets = ['509'],\n",
+    "                                       maxdatasets=5,  \n",
+    "                                       maxcells = 600,  \n",
+    "                                      )\n",
+    "dataset_ts = datasets_ts[0]"
    ]
   },
   {
