--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -19,7 +19,10 @@
     "%config Completer.use_jedi = True\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
-    "mpl.rc(\"figure\", dpi=300)\n"
+    "mpl.rc(\"figure\", dpi=300)\n",
+    "from warnings import simplefilter\n",
+    "# ignore all future warnings\n",
+    "simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -55,7 +58,9 @@
    "outputs": [],
    "source": [
     "import seaborn as sns \n",
-    "sns.pairplot(df, hue = 'score')"
+    "from ubergauss.optimization import df_remove_duplicates as clean\n",
+    "df_clean = clean(df)\n",
+    "sns.pairplot(df_clean, hue = 'score')"
    ]
   },
   {
