--- a/notebooks/scalp_sanky_diffusion.ipynb
+++ b/notebooks/scalp_sanky_diffusion.ipynb
@@ -19,8 +19,19 @@
     "%config Completer.use_jedi = True\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
-    "mpl.rc(\"figure\", dpi=300)\n"
+    "mpl.rc(\"figure\", dpi=300)\n",
+    "from warnings import simplefilter\n",
+    "# ignore all future warnings\n",
+    "simplefilter(action='ignore', category=FutureWarning)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "205356da-a0e4-482b-abba-7dc5821c2b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -89,11 +100,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e7e818-40c4-48a8-92ef-aaac6f0d8bd4",
+   "id": "341d1f73-6070-4fc2-b4f8-e1a2ae37b73e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e974bf8-0cf9-49cd-a185-143976ffa237",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = scalp.mkgraph(dataset,intra_neigh = 4, inter_neigh=2,add_tree=False)\n",
+    "dataset = scalp.umapwrap.adatas_umap(dataset,dim = 2 ,from_obsm='pca' ,label='u2')\n",
+    "scalp.snsplot(dataset,coordinate_label = 'u2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e7e818-40c4-48a8-92ef-aaac6f0d8bd4",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "data = scalp.mkgraph(dataset,intra_neigh = 30, inter_neigh=1,add_tree=False)\n",
     "dataset = scalp.graph_embed_plot(*data, embed_label = 'embedding')"
    ]
   },
@@ -101,10 +138,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2bd61bfc-8feb-40a8-b354-54bdc52ea265",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "data = scalp.mkgraph(dataset,intra_neigh = 4, inter_neigh=2,add_tree=True)\n",
+    "%%time\n",
+    "data = scalp.mkgraph(dataset,intra_neigh = 10, inter_neigh=40,add_tree=False)\n",
     "dataset = scalp.graph_embed_plot(*data, embed_label = 'embedding')"
    ]
   },
@@ -123,8 +167,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "import numpy as np\n",
+    "z=np.random.random((10,10))\n",
+    "a = np.argpartition(z,3,axis = 1)[:,:3]\n",
+    "zero = np.zeros_like(z)\n",
+    "np.put_along_axis(zero,a, np.take(z,a), axis = 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ca99d0-7c94-4b7a-83dd-5990fe28d353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec5ee9b6-cd70-4753-89f8-a5288775794e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero[zero.argmax(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "793aed4c-0ca2-45fa-b404-219f5b7180ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1296ae7e-a56e-4107-bf7a-0108a172692c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "so.heatmap(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79605823-16d1-4bb9-920f-a7a8add3b545",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "so.heatmap(zero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce8c9d6-fc67-4623-93c0-0a4fd2c37865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import structout as so \n",
+    "from sklearn.neighbors import kneighbors_graph\n",
+    "kneighbors_graph(z, 3 ,mode='distance').todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e01b7106-86c9-44c1-93d6-1ff0ed3113a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "so.heatmap(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4edc8fa-ba1b-4319-92e0-baefbdb1ea00",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
