--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2/10"
+    "dataset[0].obsm['scano'].shape"
    ]
   },
   {
@@ -254,12 +254,18 @@
     "                                  outlier_threshold = .9,\n",
     "                                  inter_neigh=1,add_tree=False)\n",
     "    \n",
-    "    dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'kamada_kawai',label = 'kawaii')\n",
+    "    dataset = scalp.mnn.scanorama(dataset,label = 'scano', base='pca')\n",
+    "    dataset = scalp.umapwrap.adatas_umap(dataset,from_obsm = 'scano', label='scanoUmap', dim = 2, n_neighbors = 40)\n",
+    "    \n",
+    "    draw.batchplot(dataset, from_obsm = 'scanoUmap')\n",
+    "    \n",
     "    dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
-    "    dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'spring', label = 'spring')\n",
     "    draw.batchplot(dataset, from_obsm = 'embedding')\n",
-    "    draw.batchplot(dataset, from_obsm = 'spring')\n",
-    "    draw.batchplot(dataset, from_obsm = 'kawaii')\n",
+    "        \n",
+    "    # dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'kamada_kawai',label = 'kawaii')\n",
+    "    # dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'spring', label = 'spring')\n",
+    "    # draw.batchplot(dataset, from_obsm = 'spring')\n",
+    "    # draw.batchplot(dataset, from_obsm = 'kawaii')\n",
     "\n",
     "    # dataset_ts, grap = scalp.mkgraph(dataset_ts,intra_neigh = ol, scaling_threshold = 1, outlier_threshold = .7,\n",
     "    # inter_neigh=1,add_tree=False)\n",
