--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -28,21 +28,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e523c00d-82d2-40dd-8078-8e8bc9109690",
+   "id": "e8586ceb-e6aa-4ab2-8cd0-9c033462b3f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ubergauss.tools as ut\n",
-    "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/results\")"
+    "import seaborn as sns \n",
+    "from ubergauss.optimization import df_remove_duplicates as clean\n",
+    "from ubergauss.optimization import get_best\n",
+    "import numpy as np\n",
+    "import ubergauss.tools as ut"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68239da2-9481-403f-b455-1a51b868420f",
+   "cell_type": "markdown",
+   "id": "e1be8a27-02cf-4a7d-bfdd-fa43fc4abca2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- one interesting thing to look at is dimensionality \n",
+    "  of the projection... do a plot dim vs output.score.score()"
+   ]
   },
   {
    "cell_type": "code",
@@ -57,10 +61,31 @@
    },
    "outputs": [],
    "source": [
-    "import seaborn as sns \n",
-    "from ubergauss.optimization import df_remove_duplicates as clean\n",
+    "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_scib1\")\n",
+    "df['score'] = [ ch+bat+sil for ch,sil,bat in zip(df.class_cohesion, df.silhouette, df.batch_cohesion)]\n",
     "df_clean = clean(df)\n",
-    "sns.pairplot(df_clean, hue = 'score')"
+    "# sns.pairplot(df_clean, hue = 'score', height=1.5, corner=True)\n",
+    "g=sns.pairplot(df_clean, hue = 'silhouette', height=1.5,  palette = 'magma')\n",
+    "\n",
+    "def overwrite(x, y, label=None, color=None, cmap=None, **kwargs):\n",
+    "    plt.scatter(x,y)\n",
+    "\n",
+    "g.map_lower(overwrite)\n",
+    "\n",
+    "df_clean['FAIL'] = [ np.isnan(z)  for z in df.score]\n",
+    "get_best(df)\n",
+    "get_best(df,column = 'silhouette')\n",
+    "df_clean.corr(method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a70696c6-e7ed-42b9-918b-4db9f28df263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -70,15 +95,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "- one interesting thing to look at is dimensionality \n",
-    "  of the projection... do a plot dim vs output.score.score()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5969ba4f-4043-4813-b893-5a3b34aa7547",
+   "id": "57b8ff2f-4049-4514-a244-8ce933965515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_TS1\")\n",
+    "df['score'] = [ ch+bat+sil for ch,sil,bat in zip(df.class_cohesion, df.silhouette, df.batch_cohesion)]\n",
+    "df_clean = clean(df)\n",
+    "sns.pairplot(df_clean, hue = 'score', height=1.5, corner=True)\n",
+    "df['FAIL'] = [ np.isnan(z)  for z in df.score]\n",
+    "get_best(df)\n",
+    "df_clean.corr(method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44b9815b-2668-4b51-a3ae-4d623340367e",
    "metadata": {},
    "outputs": [],
    "source": []
