--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -32,7 +32,10 @@
    "id": "4a946dcc-5f8b-402b-a4be-f70ff1e3dd2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scalp\n",
+    "from scalp.output import draw"
+   ]
   },
   {
    "cell_type": "code",
@@ -41,18 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# datasets_ts = data.loaddata_timeseries(test_config.timeseries_datapath,  maxdatasets=5,  maxcells = 600,  datasets = ['509'])\n",
-    "# dataset_ts = datasets_ts[0\n",
-    "# TODO FIXME"
+    "# datasets_ts = data.loaddata_timeseries(test_config.timeseries_datapath,  maxdatasets=5,  maxcells = 600,  datasets = ['s5'])\n",
+    "datasets_ts = data.loaddata_timeseries(test_config.timeseries_datapath,  maxdatasets=5,  maxcells = 1000)\n",
+    "dataset_ts = datasets_ts[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0aab4fe6-ac82-4008-a914-8215356cd9ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -62,10 +57,8 @@
    "outputs": [],
    "source": [
     "from scalp import data,  test_config\n",
-    "datasets = data.loaddata_scib(test_config.scib_datapath, \n",
-    "                       maxdatasets=5, \n",
-    "                       maxcells = 600, \n",
-    "                       datasets = [\"Immune_ALL_hum_mou.h5ad\"])\n",
+    "# datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=5,  maxcells = 1000,  datasets = [\"Immune_ALL_hum_mou\"])\n",
+    "datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=5,  maxcells = 1000 )\n",
     "\n",
     "dataset = datasets[0]\n",
     "\n",
@@ -239,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[0].obsm['scano'].shape"
+    "grap"
    ]
   },
   {
@@ -249,30 +242,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ol in [6]:\n",
-    "    dataset, grap = scalp.mkgraph(dataset,intra_neigh = ol, scaling_threshold = 1,\n",
-    "                                  outlier_threshold = .9,\n",
-    "                                  inter_neigh=1,add_tree=False)\n",
-    "    \n",
-    "    dataset = scalp.mnn.scanorama(dataset,label = 'scano', base='pca')\n",
-    "    dataset = scalp.umapwrap.adatas_umap(dataset,from_obsm = 'scano', label='scanoUmap', dim = 2, n_neighbors = 40)\n",
-    "    \n",
-    "    draw.batchplot(dataset, from_obsm = 'scanoUmap')\n",
-    "    \n",
-    "    dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
-    "    draw.batchplot(dataset, from_obsm = 'embedding')\n",
-    "        \n",
-    "    # dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'kamada_kawai',label = 'kawaii')\n",
-    "    # dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'spring', label = 'spring')\n",
-    "    # draw.batchplot(dataset, from_obsm = 'spring')\n",
-    "    # draw.batchplot(dataset, from_obsm = 'kawaii')\n",
+    "dataset, grap = scalp.mkgraph(dataset,intra_neigh = 15,\n",
+    "                              scaling_threshold = 1,\n",
+    "                              outlier_threshold = .8,\n",
+    "                              inter_neigh=2,add_tree=False)\n",
     "\n",
-    "    # dataset_ts, grap = scalp.mkgraph(dataset_ts,intra_neigh = ol, scaling_threshold = 1, outlier_threshold = .7,\n",
-    "    # inter_neigh=1,add_tree=False)\n",
-    "    # dataset_ts = scalp.umapwrap.graph_umap(dataset_ts,grap,label = 'embedding')\n",
-    "    # draw.batchplot(dataset_ts, from_obsm = 'embedding')\n",
+    "#    dataset = scalp.mnn.scanorama(dataset,label = 'scano', base='pca')\n",
+    "#    dataset = scalp.umapwrap.adatas_umap(dataset,from_obsm = 'scano', label='scanoUmap', dim = 2, n_neighbors = 40)\n",
+    "#    draw.batchplot(dataset, from_obsm = 'scanoUmap')\n",
     "\n",
-    "    #  linecopy False, intra6 and inter3 look good btw"
+    "dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
+    "draw.batchplot(dataset, from_obsm = 'embedding')\n",
+    "    \n",
+    "# dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'kamada_kawai',label = 'kawaii')\n",
+    "# dataset = scalp.umapwrap.graph_NX(dataset,grap,algo = 'spring', label = 'spring')\n",
+    "# draw.batchplot(dataset, from_obsm = 'spring')\n",
+    "# draw.batchplot(dataset, from_obsm = 'kawaii')\n",
+    "\n",
+    "# dataset_ts, grap = scalp.mkgraph(dataset_ts,intra_neigh = ol, scaling_threshold = 1, outlier_threshold = .7,\n",
+    "# inter_neigh=1,add_tree=False)\n",
+    "# dataset_ts = scalp.umapwrap.graph_umap(dataset_ts,grap,label = 'embedding')\n",
+    "# draw.batchplot(dataset_ts, from_obsm = 'embedding')\n",
+    "\n",
+    "#  linecopy False, intra6 and inter3 look good btw\n",
+    "plt.matshow(grap.todense())"
    ]
   },
   {
@@ -313,7 +306,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(a)"
+    "import numpy as np\n",
+    "a = np.zeros((4, 4))\n",
+    "np.fill_diagonal(a, 1)\n",
+    "a[0,3]=1\n",
+    "a[3,0]=1\n",
+    "a[2,0]=1\n",
+    "a[1,2]=1\n",
+    "a[2,3]=1\n",
+    "print(a)\n",
+    "print(a*a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "153bbb65-52d4-486d-925e-f0afcbdec529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in [2]:\n",
+    "    dataset, grap = scalp.mkgraph(dataset,intra_neigh = 16, \n",
+    "                                  inter_neigh=x,\n",
+    "                                  add_tree=True,\n",
+    "                                  outlier_threshold=1)\n",
+    "    dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
+    "    draw.batchplot(dataset, from_obsm = 'embedding')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "617ac3ea-74a2-4084-8664-39e56170264c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "from scalp.data.similarity import make_stairs\n",
+    "dataset_ts, grapt = scalp.mkgraph(dataset_ts,\n",
+    "                                  intra_neigh = 3, \n",
+    "                                  intra_neighbors_mutual = True,\n",
+    "                                  inter_neigh=1,\n",
+    "                                  add_tree=True, \n",
+    "                                  copy_lsa_neighbors = False,\n",
+    "                                  inter_outlier_threshold = None,\n",
+    "                                  inter_outlier_probabilistic_removal =True,\n",
+    "                                  dataset_adjacency = make_stairs(len(dataset_ts),[0,1,2]) )\n",
+    "dataset_ts = scalp.umapwrap.graph_umap(dataset_ts,grapt,label = 'embedding')\n",
+    "draw.batchplot(dataset_ts, from_obsm = 'embedding')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc347095-ae52-48f7-8c8a-902b4ec1905e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "448d368e-bd2a-467d-bba5-6b50ecd10133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "from scalp.data.similarity import make_stairs\n",
+    "dataset, grap = scalp.mkgraph(dataset,\n",
+    "                                  intra_neigh = 16, \n",
+    "                                  intra_neighbors_mutual = True,\n",
+    "                                  inter_neigh=5,\n",
+    "                                  add_tree=True, \n",
+    "                                  copy_lsa_neighbors = True,\n",
+    "                                  inter_outlier_threshold = None,\n",
+    "                                  inter_outlier_probabilistic_removal =True)\n",
+    "dataset = scalp.umapwrap.graph_umap(dataset,grap,label = 'embedding')\n",
+    "draw.batchplot(dataset, from_obsm = 'embedding')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f81fa882-f219-4fad-ac78-93ba87639464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.matshow(grapt.todense()[:600,:600])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99935a86-b549-4c0d-9150-fd891f80554f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bestparms = {'intra_neigh': 4, 'intra_neighbors_mutual': True, 'inter_neigh': 3, 'add_tree': True, 'copy_lsa_neighbors': False,\n",
+    "             'inter_outlier_threshold': 0.75, 'inter_outlier_probabilistic_removal': True}\n",
+    "for ds in datasets_ts:\n",
+    "    ds, grapt = scalp.mkgraph(ds, intra_neigh = 7,  inter_neigh=1, add_tree=True,  outlier_threshold = 1, dataset_adjacency = make_stairs(len(ds),[0,1]) )\n",
+    "    # ds, grapt = scalp.mkgraph(ds, **bestparms)\n",
+    "    ds = scalp.umapwrap.graph_umap(ds,grapt,label = 'embedding')\n",
+    "    draw.batchplot(ds, from_obsm = 'embedding')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e05aa02d-4f83-490d-8378-58a679e22d55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bestparams = {'intra_neigh': 4, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.6, 'inter_outlier_probabilistic_removal': False}\n",
+    "best_silh = {'intra_neigh': 6, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True,  'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.6, 'inter_outlier_probabilistic_removal': False}\n",
+    "for ds in datasets:\n",
+    "    # ds, grapt = scalp.mkgraph(ds, intra_neigh = 7,  inter_neigh=1, add_tree=True,  outlier_threshold = 1, dataset_adjacency = make_stairs(len(ds),[0,1]) )\n",
+    "    ds, grapt = scalp.mkgraph(ds, **notperfectparams)\n",
+    "    ds = scalp.umapwrap.graph_umap(ds,grapt,label = 'embedding')\n",
+    "    draw.batchplot(ds, from_obsm = 'embedding')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4a38f37-caff-4dca-9022-c237914f5111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "notperfectparams = {'intra_neigh': 8, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True,\n",
+    "              'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.95, 'inter_outlier_probabilistic_removal': False}\n",
+    "ds =  datasets[2]\n",
+    "ds, grapt = scalp.mkgraph(ds, **bestparams)\n",
+    "ds = scalp.umapwrap.graph_umap(ds,grapt,label = 'embedding')\n",
+    "draw.batchplot(ds, from_obsm = 'embedding')"
    ]
   }
  ],
