--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -49,15 +49,16 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
-    "def scanorama(dataset):\n",
+    "\n",
+    "def scanorama(dataset, dim = 2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    dataset = scalp.mnn.scanorama(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='scanorama')\n",
+    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='scanorama', dim= dim)\n",
     "    return scalp.transform.stack(dataset)\n",
     "\n",
-    "\n",
-    "sc.pl.umap(scanorama(dataset), color=['batch', 'label'])"
+    "st = scanorama(dataset)\n",
+    "sc.pl.umap(st, color=['batch', 'label'])"
    ]
   },
   {
@@ -76,10 +77,13 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
-    "dataset = scalp.pca.pca(dataset)\n",
-    "[ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='pca40')\n",
-    "stack = scalp.transform.stack(dataset)\n",
+    "def umaponly(dataset,dim=2):\n",
+    "    dataset = scalp.pca.pca(dataset)\n",
+    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
+    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='pca40', dim =dim)\n",
+    "    return scalp.transform.stack(dataset)\n",
+    "    \n",
+    "stack = umaponly(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
   },
@@ -91,36 +95,15 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
-    "def bbknn(dataset):\n",
+    "def bbknn(dataset, dim = 2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    dataset = scalp.mnn.bbknnwrap(dataset)\n",
+    "    dataset = scalp.mnn.bbknnwrap(dataset, dim = dim)\n",
     "    stack = scalp.transform.stack(dataset)\n",
     "    return stack\n",
     "\n",
     "stack = bbknn(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b35ae3b-8b53-478d-b2e2-5353078f80d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba90a3ec-7157-4247-a755-32d0d1a85e85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.pp.neighbors(stack,use_rep = 'pca40')\n",
-    "stack.obsp['connectivities']"
    ]
   },
   {
@@ -139,10 +122,12 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
-    "[ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "dataset = scalp.mnn.combat(dataset)\n",
-    "scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='combat')\n",
-    "stack = scalp.transform.stack(dataset)\n",
+    "def combat(dataset, dim = 2):\n",
+    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
+    "    dataset = scalp.mnn.combat(dataset)\n",
+    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='combat', dim =dim)\n",
+    "    return scalp.transform.stack(dataset)\n",
+    "stack= combat(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
   },
@@ -162,30 +147,66 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
-    "parm = {'intra_neigh': 8, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True,\n",
-    "              'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.95, 'inter_outlier_probabilistic_removal': False}\n",
-    "dataset, grap = scalp.mkgraph(dataset,**parm)\n",
-    "scalp.umapwrap.graph_umap(dataset,grap,label = 'umap')\n",
-    "stack = scalp.transform.stack(dataset)\n",
+    "def Scalp(dataset, dim = 2):\n",
+    "    parm = {'intra_neigh': 8, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True,\n",
+    "                  'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.95, 'inter_outlier_probabilistic_removal': False}\n",
+    "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
+    "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
+    "    return scalp.transform.stack(dataset)\n",
+    "    \n",
+    "stack = Scalp(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eef08f9-a5cd-48bd-82eb-a19fab18c1f8",
+   "id": "adaf1e67-89f7-4865-879c-8b31c62e9fc0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ubergauss.tools as ut\n",
+    "from lmz import *\n",
     "\n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "def score(sad):\n",
-    "    X = sad.obsm['umap']\n",
-    "    y = sad.obsm['umap']\n",
+    "funcs = [scanorama, umaponly, bbknn, combat, Scalp] \n",
+    "\n",
+    "fuid = Range(funcs)\n",
+    "dataid = Range(datasets) \n",
+    "tasks = [(f,d) for f in fuid for d in dataid]\n",
+    "\n",
+    "def run(fd):\n",
+    "    f,d = fd\n",
+    "    fun = funcs[f]\n",
+    "    dat = datasets[d]\n",
+    "    stack = fun(dat,10)\n",
+    "    return stack\n",
     "    \n",
-    "    \n",
-    "    "
+    "mydata = ut.xxmap(run, tasks) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54886487-bf06-4edc-ae1f-501b637227d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scib.metrics import metrics_slim\n",
+    "def score(dataset):\n",
+    "    # ds2 = dataset.copy()\n",
+    "    # ds2.X = ds2.obsm['umap']\n",
+    "    return metrics_slim(dataset, dataset, 'batch', 'label', embed = 'umap',verbose = True)\n",
+    "    \n",
+    "print(score(mydata[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "794d15cb-efe1-4469-a76f-deed5c544958",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
