--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -17,9 +17,11 @@
     "mpl.rc(\"figure\", dpi=100)\n",
     "from warnings import simplefilter\n",
     "# ignore all future warnings\n",
-    "simplefilter(action='ignore', category=FutureWarning)\n",
+    "simplefilter(action='ignore')\n",
     "import scalp\n",
-    "from scalp.output import draw"
+    "from scalp.output import draw\n",
+    "import lmz\n",
+    "import numpy as np"
    ]
   },
   {
@@ -148,7 +150,8 @@
    "source": [
     "import scanpy as sc\n",
     "def Scalp(dataset, dim = 2):\n",
-    "    parm = {'intra_neigh': 8, 'intra_neighbors_mutual': False, 'inter_neigh': 4, 'add_tree': True,\n",
+    "    parm = {'intra_neigh': 8, 'intra_neighbors_mutual': False,\n",
+    "            'inter_neigh': 2, 'add_tree': True,\n",
     "                  'copy_lsa_neighbors': False, 'inter_outlier_threshold': 0.95, 'inter_outlier_probabilistic_removal': False}\n",
     "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
     "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
@@ -178,7 +181,7 @@
     "    f,d = fd\n",
     "    fun = funcs[f]\n",
     "    dat = datasets[d]\n",
-    "    stack = fun(dat,10)\n",
+    "    stack = fun(dat,8)\n",
     "    return stack\n",
     "    \n",
     "mydata = ut.xxmap(run, tasks) "
@@ -187,26 +190,148 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4e6ba4b-2a75-40ac-8c1a-efbe8c9923c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "54886487-bf06-4edc-ae1f-501b637227d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scib.metrics import metrics_slim\n",
+    "from scib.metrics import metrics\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "def score(dataset):\n",
     "    # ds2 = dataset.copy()\n",
     "    # ds2.X = ds2.obsm['umap']\n",
-    "    return metrics_slim(dataset, dataset, 'batch', 'label', embed = 'umap',verbose = True)\n",
+    "    # https://scib.readthedocs.io/en/latest/api.html#biological-conservation-metrics\n",
+    "    embed = 'umap' if 'umap' in dataset.obsm else 'X_umap'\n",
+    "    sc =  metrics(dataset, dataset, 'batch', 'label', embed = embed,\n",
+    "                       isolated_labels_asw_=True, silhouette_=True, hvg_score_=True, graph_conn_=True,\n",
+    "           pcr_=True,\n",
+    "             isolated_labels_f1_=True,\n",
+    "             trajectory_=False,\n",
+    "             nmi_=True,\n",
+    "            ari_=True )\n",
+    "    return dict(sc)[0]\n",
     "    \n",
-    "print(score(mydata[0]))"
+    "def score_lin(dataset):\n",
+    "    y = dataset.obs['label']\n",
+    "    X = dataset.obsm['umap'] if 'umap' in dataset.obsm else dataset.obsm['X_umap']\n",
+    "    prediction = SGDClassifier().fit(X,y).predict(X)\n",
+    "    return accuracy_score(y , prediction )\n",
+    "    \n",
+    "def score_lin_batch(dataset):\n",
+    "    # do this per cell line\n",
+    "    def acc(label): \n",
+    "        instances = dataset.obs['label'] == label \n",
+    "        tmp_dataset = dataset[instances]\n",
+    "        y = tmp_dataset.obs['batch']\n",
+    "        if len(np.unique(y)) < 2:\n",
+    "            return np.nan\n",
+    "        X = tmp_dataset.obsm['umap'] if 'umap' in tmp_dataset.obsm else tmp_dataset.obsm['X_umap']\n",
+    "        prediction = SGDClassifier().fit(X,y).predict(X)\n",
+    "        \n",
+    "        return accuracy_score(y , prediction )\n",
+    "    \n",
+    "    return np.nanmean([1-acc(l) for l in np.unique(dataset.obs['label'])])\n",
+    "    \n",
+    "scoredics_lb = ut.xxmap(score_lin_batch, mydata)\n",
+    "scoredics_scib = ut.xxmap(score, mydata)\n",
+    "scoredics_l = ut.xxmap(score_lin, mydata)\n",
+    "\n",
+    "# score_lin_batch and score_lin -> pareto comparison"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794d15cb-efe1-4469-a76f-deed5c544958",
+   "id": "b2a77035-484c-4868-86ea-a0337b2f03b3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "# this only applies if we dont use the scib score fucntion\n",
+    "funcs = 'scanorama, umaponly, bbknn, combat, Scalp'.split(', ')\n",
+    "\n",
+    "results = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'label' } for s,(f,d) in zip(scoredics_l,tasks)]\n",
+    "results += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch'} for s,(f,d) in zip(scoredics_lb,tasks)]\n",
+    "df = pd.DataFrame(results)\n",
+    "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue='target')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bf5dfc1-5b60-46ca-a721-2ecfbdbc60d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lmz\n",
+    "# this is for SCIB scoring \n",
+    "def doit(e):\n",
+    "    d = dict(e)\n",
+    "    for k in list(d.keys()):\n",
+    "        if np.isnan(d[k]):\n",
+    "            d.pop(k)\n",
+    "    d.pop('hvg_overlap',0)\n",
+    "    return d\n",
+    "scoredicts = lmz.Map(doit, scoredics_scib)\n",
+    "\n",
+    "funcs = 'scanorama, umaponly, bbknn, combat, Scalp'.split(', ')\n",
+    "results = [ [{\"method\":funcs[f], 'score':ss, 'dataset':d, 'metric':scrmeth } \n",
+    "             for (scrmeth,ss) in s.items() ]for s,(f,d) in zip(scoredicts,tasks)]\n",
+    "results = lmz.Flatten(results)\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue = 'metric')\n",
+    "plt.legend(loc='right', bbox_to_anchor=(1.85, 0.5), ncol=1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b593fc3-045f-43d4-9b08-23ba21c9aee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def split_scib_scores(dicts):\n",
+    "    batchwords = 'PCR_batch ASW_label/batch graph_conn'.split()\n",
+    "    \n",
+    "    def split(d):\n",
+    "        b = np.mean([v for k,v in d.items() if k in batchwords ])\n",
+    "        a = np.mean([v for k,v in d.items() if not k in batchwords ])\n",
+    "        return a,b\n",
+    "        \n",
+    "    scores = lmz.Map(split, dicts) \n",
+    "    return lmz.Transpose(scores)    \n",
+    "  \n",
+    "\n",
+    "scr_l, scr_b = split_scib_scores(scoredicts)\n",
+    "results = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'label_scib_avg' } for s,(f,d) in zip(scr_l,tasks)]\n",
+    "results += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch_scib_avg'} for s,(f,d) in zip(scr_b,tasks)]\n",
+    "df = pd.DataFrame(results)\n",
+    "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue='target')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4bc703-22a2-4270-91da-9431e8763fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.pivot_table(index='method', columns='target', values='score')"
+   ]
   }
  ],
  "metadata": {
