scalp/graph.py scalp/__init__.py -m sync

--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -19,11 +19,14 @@
     "%config Completer.use_jedi = True\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
-    "mpl.rc(\"figure\", dpi=300)\n",
+    "mpl.rc(\"figure\", dpi=100)\n",
     "from warnings import simplefilter\n",
     "# ignore all future warnings\n",
     "simplefilter(action='ignore', category=FutureWarning)\n",
-    "\n"
+    "\n",
+    "import scalp\n",
+    "from scalp.output import draw\n",
+    "from scalp import data,  test_config"
    ]
   },
   {
@@ -32,10 +35,7 @@
    "id": "4a946dcc-5f8b-402b-a4be-f70ff1e3dd2e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import scalp\n",
-    "from scalp.output import draw"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -56,9 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scalp import data,  test_config\n",
     "# datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=5,  maxcells = 1000,  datasets = [\"Immune_ALL_hum_mou\"])\n",
-    "datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=5,  maxcells = 1000 )\n",
+    "datasets = data.loaddata_scib(test_config.scib_datapath,  maxdatasets=3,  maxcells = 100 )\n",
     "\n",
     "dataset = datasets[0]\n",
     "\n",
@@ -242,10 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset, grap = scalp.mkgraph(dataset,intra_neigh = 15,\n",
-    "                              scaling_threshold = 1,\n",
-    "                              outlier_threshold = .8,\n",
-    "                              inter_neigh=2,add_tree=False)\n",
+    "dataset, grap = scalp.mkgraph(dataset,neighbors_total = 30, \n",
+    "                              neighbors_intra_fraction = .5,\n",
+    "                              add_tree=False)\n",
     "\n",
     "#    dataset = scalp.mnn.scanorama(dataset,label = 'scano', base='pca')\n",
     "#    dataset = scalp.umapwrap.adatas_umap(dataset,from_obsm = 'scano', label='scanoUmap', dim = 2, n_neighbors = 40)\n",
@@ -443,6 +441,75 @@
     "ds = scalp.umapwrap.graph_umap(ds,grapt,label = 'embedding')\n",
     "draw.batchplot(ds, from_obsm = 'embedding')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93ac94d9-5566-4ab0-b668-ec853064ecb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import sparse\n",
+    "z =sparse.lil_matrix([[1,2,3,0],[],[0,0,0,1]])\n",
+    "print (z.__dict__)\n",
+    "for zz in z:\n",
+    "    print (zz.rows[0])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d778591d-874e-46fe-8e0e-cda648282ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "zz = np.random.rand(4)\n",
+    "zz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1092c363-7294-4ab4-9434-65e841766aec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz > .3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8170b414-36d4-4319-88b0-c07712d60a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def remove_values_with_probability(matrix, p):\n",
+    "    # Create a mask with True values based on the probability p\n",
+    "    mask = np.random.rand(*matrix.shape) > p\n",
+    "    # Apply the mask to the matrix to remove values\n",
+    "    matrix_removed = np.where(mask, matrix, 0)\n",
+    "    return matrix_removed\n",
+    "\n",
+    "# Example usage:\n",
+    "# Assuming you have a matrix 'my_matrix' and want to remove values with a probability of 0.2 (20%)\n",
+    "my_matrix = sparse.lil_matrix([[1, 0, 0], [4, 5, 6], [7, 8, 9]])\n",
+    "probability = 0.2\n",
+    "\n",
+    "result_matrix = remove_values_with_probability(my_matrix, probability)\n",
+    "print(result_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c2e4cb-bf55-4354-ae4d-8348a193f12a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
