--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "from scib.metrics import metrics\n",
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
     "def score(dataset):\n",
     "    # ds2 = dataset.copy()\n",
     "    # ds2.X = ds2.obsm['umap']\n",
@@ -235,9 +235,10 @@
     "            return np.nan\n",
     "        X = tmp_dataset.obsm['umap'] if 'umap' in tmp_dataset.obsm else tmp_dataset.obsm['X_umap']\n",
     "        prediction = SGDClassifier().fit(X,y).predict(X)\n",
-    "        \n",
-    "        return accuracy_score(y , prediction )\n",
+    "        return balanced_accuracy_score(y , prediction, adjusted=True )\n",
     "    \n",
+    "    # scores = np.array([1-acc(l) for l in np.unique(dataset.obs['label'])]) ### !!!! \n",
+    "    # weight by label counts .. \n",
     "    return np.nanmean([1-acc(l) for l in np.unique(dataset.obs['label'])])\n",
     "    \n",
     "scoredics_lb = ut.xxmap(score_lin_batch, mydata)\n",
@@ -263,7 +264,8 @@
     "results += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch'} for s,(f,d) in zip(scoredics_lb,tasks)]\n",
     "df = pd.DataFrame(results)\n",
     "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue='target')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "ours = df.pivot_table(index='method', columns='target', values='score')"
    ]
   },
   {
@@ -316,12 +318,32 @@
     "  \n",
     "\n",
     "scr_l, scr_b = split_scib_scores(scoredicts)\n",
-    "results = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'label_scib_avg' } for s,(f,d) in zip(scr_l,tasks)]\n",
+    "results = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'bioconservation_scib_avg' } for s,(f,d) in zip(scr_l,tasks)]\n",
     "results += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch_scib_avg'} for s,(f,d) in zip(scr_b,tasks)]\n",
     "df = pd.DataFrame(results)\n",
     "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue='target')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "theirs = df.pivot_table(index='method', columns='target', values='score')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa404d9a-25e9-4c0c-8744-c8adcfac8339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ubergauss.optimization import pareto_scores\n",
+    "pareto_scores(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2be69fc-1ec9-42f0-8428-91e33589da88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -330,8 +352,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.pivot_table(index='method', columns='target', values='score')"
+    "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84258f50-ab42-401d-89aa-24372de4a04d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.corrcoef(ours.batch.values, theirs.batch_scib_avg.values)[0,1], np.corrcoef(ours.label.values, theirs.bioconservation_scib_avg.values)[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64bc876a-cea0-46a4-96cf-db729f555885",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
